Update the index file template

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <meta name="keywords" content="###  add custom content  ###">
-    <meta name="description" content="###  add custom content  ###">
+    <meta name="keywords" content="particles, js">
+    <meta name="description" content="A project meant to create particles upon cursor hover. Made for practice purposes.">
     <meta name="author" content="Victor Shaviya">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- start of bootstrap cdn for styles and icons -->
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="./assets/styles.css" type="text/css">
     <!-- end of my custom css rules  -->
     <link rel="shortcut icon" type="image/ico" href="./assets/images/favicon.png">
-    <title>###  add custom content  ###</title>
+    <title>hover_particles</title>
   </head>
 
   <body>
